welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:57: error: plm.universe.Direction does not have a constructor
	var inital = new Direction(getDirection());
                     ^SnakeBuggle:71: error: not found: value initial
	while(getDirection() != initial)
                                ^